// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create.handler Should create a loan, correct amount 1`] = `
Object {
  "body": Object {
    "attrs": Object {
      "amount": 1,
      "createdAt": "2019-06-07T21:11:07.751Z",
      "id": "b0667a9d-fa09-473e-87a5-f5753983b840",
      "status": "offered",
    },
  },
  "headers": Object {},
  "statusCode": 200,
}
`;

exports[`create.handler Should not create a loan, company is not active 1`] = `
Object {
  "body": "company is not suitable for a loan",
  "headers": Object {},
  "statusCode": 400,
}
`;

exports[`create.handler Should not create a loan, error from openKvk 1`] = `
Object {
  "body": [Error: openKvk problem],
  "headers": Object {},
  "statusCode": 400,
}
`;

exports[`create.handler Should not create a loan, incorrect amount, missing companyId 1`] = `
Object {
  "body": Object {
    "validationErrors": Array [
      Object {
        "message": "\\"amount\\" must be a number",
      },
      Object {
        "message": "\\"companyId\\" is required",
      },
    ],
  },
  "headers": Object {},
  "statusCode": 400,
}
`;

exports[`create.handler Should not create a loan, incorrect amount, missing companyId 2`] = `
Object {
  "body": Object {
    "validationErrors": Array [
      Object {
        "message": "\\"companyId\\" must be a string",
      },
    ],
  },
  "headers": Object {},
  "statusCode": 400,
}
`;

exports[`create.handler Should pass validation, throws error on dynamodb 1`] = `
Object {
  "body": [Error: db error],
  "headers": Object {},
  "statusCode": 400,
}
`;
